--- a/Extract_bounding_box_from_masks.ipynb
+++ b/Extract_bounding_box_from_masks.ipynb
@@ -127,9 +127,9 @@
     "\n",
     "\n",
     "# train\n",
-    "# save_bnd_box(\"D:/Glaucoma/Banco_de_dados/REFUGE/Annotation-Training400/Annotation-Training400/Disc_Cup_Masks\", 'train', 'REFUGE/train/')\n",
+    "save_bnd_box(\"D:/Glaucoma/Banco_de_dados/REFUGE/Annotation-Training400/Annotation-Training400/Disc_Cup_Masks\", 'train', 'REFUGE/train/')\n",
     "# # valid\n",
-    "# save_bnd_box(\"D:/Glaucoma/Banco_de_dados/REFUGE/REFUGE-Validation400/REFUGE-Validation400-GT/Disc_Cup_Masks\", 'valid', 'REFUGE/train/')\n",
+    "save_bnd_box(\"D:/Glaucoma/Banco_de_dados/REFUGE/REFUGE-Validation400/REFUGE-Validation400-GT/Disc_Cup_Masks\", 'valid', 'REFUGE/train/')\n",
     "# test\n",
     "save_bnd_box('D:/Glaucoma/Banco_de_dados/REFUGE/REFUGE-Test-GT/Disc_Cup_Masks', 'test', 'REFUGE/test/')"
    ]
