--- a/PrepareData/Extract_bounding_box_from_masks.ipynb
+++ b/PrepareData/Extract_bounding_box_from_masks.ipynb
@@ -12,7 +12,8 @@
     "import cv2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import imutils"
+    "import imutils\n",
+    "import shutil\n"
    ]
   },
   {
@@ -44,7 +45,8 @@
     "        file = path_img.split(\"\\\\\")[-1][:-4]\n",
     "        img_name.append(file)\n",
     "        mask_image = cv2.cvtColor(mask_image, cv2.COLOR_BGR2GRAY)\n",
-    "        mask_image = abs(255-mask_image)\n",
+    "        mask_image = cv2.resize(mask_image, (640,640))\n",
+    "#         mask_image = abs(255-mask_image)\n",
     "\n",
     "\n",
     "        # Convert to binary image using thresholding\n",
@@ -108,6 +110,8 @@
     "                yolo_boxes, img_name = bounding_box_mask(image_path)\n",
     "                \n",
     "                # Save bounding boxes to a file in YOLOv5 format\n",
+    "                if not os.path.exists(output):\n",
+    "                    os.makedirs(output)\n",
     "                with open(output + file + '.txt', 'w') as f:\n",
     "                    for box in yolo_boxes:\n",
     "                        f.write(f'{box[0]} {box[1]:.6f} {box[2]:.6f} {box[3]:.6f} {box[4]:.6f}\\n')\n",
@@ -123,6 +127,8 @@
     "\n",
     "\n",
     "            # Save bounding boxes to a file in YOLOv5 format\n",
+    "            if not os.path.exists(output):\n",
+    "                os.makedirs(output)\n",
     "            with open(output + file + '.txt', 'w') as f:\n",
     "                for box in yolo_boxes:\n",
     "                    f.write(f'{box[0]} {box[1]:.6f} {box[2]:.6f} {box[3]:.6f} {box[4]:.6f}\\n')\n",
@@ -130,11 +136,11 @@
     "    return \n",
     "\n",
     "\n",
-    "\n",
+    "# REFUGE\n",
     "# train\n",
     "save_bnd_box(\"D:/Glaucoma/Banco_de_dados/REFUGE/Annotation-Training400/Annotation-Training400/Disc_Cup_Masks\", 'train', 'REFUGE/train/')\n",
-    "# # valid\n",
-    "save_bnd_box(\"D:/Glaucoma/Banco_de_dados/REFUGE/REFUGE-Validation400/REFUGE-Validation400-GT/Disc_Cup_Masks\", 'valid', 'REFUGE/train/')\n",
+    "# # # valid\n",
+    "save_bnd_box(\"D:/Glaucoma/Banco_de_dados/REFUGE/REFUGE-Validation400/REFUGE-Validation400-GT/Disc_Cup_Masks\", 'train', 'REFUGE/train/')\n",
     "# test\n",
     "save_bnd_box('D:/Glaucoma/Banco_de_dados/REFUGE/REFUGE-Test-GT/Disc_Cup_Masks', 'test', 'REFUGE/test/')"
    ]
@@ -142,7 +148,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "650c28d0",
+   "id": "9368c0bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract mask dataset PAPILA\n",
+    "save_bnd_box(\"C:/Users/debora.assis/Documents/Multi_Classe/papila/Masks_sep\", 'train', 'PAPILA/train/')\n",
+    "# extract mask dataset G1020\n",
+    "save_bnd_box(\"D:/Glaucoma/Banco_de_dados/G1020/masks\", 'valid', 'G1020/train/')\n",
+    "# extract mask dataset DRISTHI-GS\n",
+    "save_bnd_box(\"D:/Glaucoma/Banco_de_dados/DRISHTI_GS/Drishti-GS1_files/Training/Training/masks_disc\", 'valid', 'Drishti/test/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ece0ade",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -268,7 +289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -282,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
