--- a/Predict/yolo_predictions_image_or_video.ipynb
+++ b/Predict/yolo_predictions_image_or_video.ipynb
@@ -38,7 +38,7 @@
     "    data_yaml = yaml.load(f,Loader=SafeLoader)\n",
     "    \n",
     "labels = data_yaml['names']\n",
-    "print(labels)"
+    "print(labels)\n"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# load YOLO model\n",
-    "yolo = cv2.dnn.readNetFromONNX('C:/Users/debora.assis/Documents/YOLOv5_bounding_box_from_masks/Predict/Model4/weights/best.onnx')\n",
+    "yolo = cv2.dnn.readNetFromONNX('C:/Users/debora.assis/Documents/GitHub/YOLOv5_bounding_box_from_masks/Predict/Model2/weights/yolov5_model.onnx')\n",
     "yolo.setPreferableBackend(cv2.dnn.DNN_BACKEND_OPENCV)\n",
     "yolo.setPreferableTarget(cv2.dnn.DNN_TARGET_CPU)"
    ]
@@ -100,7 +100,7 @@
     "    for i in range(len(detections)):\n",
     "        row = detections[i]\n",
     "        confidence = row[4] # confidence of detection \n",
-    "        if confidence > 0.1:\n",
+    "        if confidence > 0.8:\n",
     "            a = 0\n",
     "            class_score = row[5:].max() \n",
     "            class_id = row[5:].argmax() \n",
@@ -319,6 +319,7 @@
    "source": [
     "# HRF\n",
     "path = 'D:/Glaucoma/Banco_de_dados/HRF/images/Retinopatia/'\n",
+    "\n",
     "extensoes = ['jpg', 'jpeg', 'png']\n",
     "imagens_path = [imagem for extensao in extensoes for imagem in glob.glob(f'{path}/*.{extensao}')]\n",
     "i=[]\n",
@@ -339,14 +340,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a804c0f",
+   "id": "4ee25a37",
    "metadata": {},
    "outputs": [],
    "source": [
     "cap = cv2.VideoCapture('video.mp4')\n",
-    "\n",
+    "save = False\n",
     "saida_dir = \"saida_video\"\n",
-    "i = 0\n",
     "while True:\n",
     "    \n",
     "    ret, frame = cap.read()\n",
@@ -355,34 +355,84 @@
     "        break\n",
     "        \n",
     "    try:\n",
+    "        \n",
+    "        image = frame\n",
+    "        row, col, d = image.shape\n",
+    "        max_rc = max(row,col)\n",
+    "        input_image = np.zeros((max_rc,max_rc,3),dtype=np.uint8)\n",
+    "        input_image[0:row,0:col] = image\n",
     "\n",
-    "        pred_image = yolo.predictions(frame)\n",
+    "        INPUT_WH_YOLO = 640\n",
+    "        blob = cv2.dnn.blobFromImage(input_image,1/255,(INPUT_WH_YOLO,INPUT_WH_YOLO),swapRB=True,crop=False)\n",
+    "        yolo.setInput(blob)\n",
+    "        preds = yolo.forward() # detection or prediction from YOLO\n",
+    "\n",
+    "\n",
+    "        detections = preds[0]\n",
+    "        boxes = []\n",
+    "        confidences = []\n",
+    "        classes = []\n",
+    "\n",
+    "\n",
+    "        image_w, image_h = input_image.shape[:2]\n",
+    "        x_factor = image_w/INPUT_WH_YOLO\n",
+    "        y_factor = image_h/INPUT_WH_YOLO\n",
+    "        i = 0\n",
+    "        for i in range(len(detections)):\n",
+    "            row = detections[i]\n",
+    "            confidence = row[4] # confidence of detection \n",
+    "            if confidence > 0.8:\n",
+    "                class_score = row[5:].max() \n",
+    "                class_id = row[5:].argmax() \n",
+    "\n",
+    "                cx, cy, w, h = row[0:4]\n",
+    "                # construct bounding \n",
+    "                left = int((cx - 0.5*w)*x_factor)\n",
+    "                top = int((cy - 0.5*h)*y_factor)\n",
+    "                width = int(w*x_factor)\n",
+    "                height = int(h*y_factor)\n",
+    "\n",
+    "                box = np.array([left,top,width,height])\n",
+    "\n",
+    "                # append values into the list\n",
+    "                confidences.append(confidence)\n",
+    "                boxes.append(box)\n",
+    "                classes.append(class_id)\n",
+    "\n",
+    "        # clean\n",
+    "        boxes_np = np.array(boxes).tolist()\n",
+    "        confidences_np = np.array(confidences).tolist()\n",
+    "    #     print(confidences_np)\n",
+    "\n",
+    "#         if len(boxes_np) > 0:\n",
+    "            # Encontre o índice da caixa com a maior confiança\n",
+    "        max_confidence_index = np.argmax(confidences_np)\n",
+    "\n",
+    "        # Extraia a caixa delimitadora com a maior confiança\n",
+    "        x, y, w, h = boxes_np[max_confidence_index]\n",
+    "        bb_conf = np.round(confidences_np[max_confidence_index],2)\n",
+    "        class_id = classes[max_confidence_index]\n",
+    "        class_name = labels[class_id]\n",
+    "\n",
+    "        text = f'Conf: {bb_conf}'\n",
+    "        \n",
+    "        cv2.rectangle(image, (x, y), (x + w, y + h), (0, 255,0), 2)\n",
+    "#             cv2.rectangle(image, (x, y - 30), (x + w, y), (255, 170, 170), -1)\n",
+    "        cv2.putText(image, text, (x, y - 10), cv2.FONT_HERSHEY_SIMPLEX, 1.5, (0, 255,0), 2)\n",
+    "        plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
+    "        plt.show()\n",
+    "        cv2.imwrite('image_' + str(i) + '.jpg', image)\n",
+    "        i = i + 1\n",
     "    except:\n",
     "        pass\n",
-    "    cv2.imshow(\"YOLO v5\", cv2.cvtColor(pred_image, cv2.COLOR_BGR2RGB))\n",
     "    \n",
-    "    if save == True:\n",
-    "        \n",
-    "        if not os.path.exists(saida_dir):\n",
-    "            os.mkdir(saida_dir)\n",
-    "\n",
-    "    roi_image = img[y:y+h,x:x+w]\n",
-    "    cv2.imwrite(saida_dir + 'image_' + str(i) + '.jpg', cv2.cvtColor(pred_image, cv2.COLOR_BGR2RGB))\n",
-    "    i = i + 1\n",
+    "    \n",
     "    if cv2.waitKey(1) == 27:\n",
     "        break\n",
     "\n",
     "cv2.destroyAllWindows()\n",
-    "cap.release()"
+    "cap.release()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "491be8e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
